commit on master

--- a/src/style.sass
+++ b/src/style.sass
@@ -1,5 +1,5 @@
 
-#app
+.card
   display: grid
   grid-template-columns: repeat(4, 1fr)
   row-gap: 10px
@@ -12,7 +12,7 @@
   height: auto
 
 
-.card
+#country
   width: 200px
   height: 300px
   background-color: white
