--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-#app {
+.card {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[4];
@@ -14,7 +14,7 @@
   height: auto;
 }
 
-.card {
+#country {
   width: 200px;
   height: 300px;
   background-color: white;
