--- a/src/style.sass
+++ b/src/style.sass
@@ -2,18 +2,23 @@
 .card
   display: grid
   grid-template-columns: repeat(4, 1fr)
-  row-gap: 10px
-  column-gap: 1px
+  row-gap: 2rem
+  column-gap: 2rem
   place-items: center
 
+.countries
+    width: 200px
+    height: 300px
+    background-color: white
+    box-shadow: 0px 0px 9px black
 
-.flag
-  width: 100%
-  height: auto
+    .flag
+        width: 100%
+        height: auto
+    .country
+        font-size: 1.5rem
+    .population
+        font-size: 1rem
 
 
-#country
-  width: 200px
-  height: 300px
-  background-color: white
-  box-shadow: 0px 0px 9px black
+
